syntax = "proto3";

package calculator;
option go_package = "calculatorpb";

message Request {
    int32 first_number = 1;
    int32 second_number = 2;
}

message Response {
    int32 sum = 1;
}

message PrimeNumberRequest {
    int32 number = 1;
}

message DecompositionResponse {
    int32 decomposedNumber = 1;
}

service CalculatorService {
    rpc Sum(Request) returns (Response) {};
    rpc PrimeNumberDecomposition(PrimeNumberRequest) returns (stream DecompositionResponse) {};
}